 - = Features that has been removed

=======

1.9.13 (2013-07-??)
 ~ Custom SQlite map sources can now be specified using a relative path
 ~ BackCountry Navigator format updated - now SQLite based atlases are created
 + Japanese translation added (thanks to "u/ta-ka") [patch #33]
 ! Not translated tooltip corrected [patch #34]
 ! A problem with MapSourceInitializationException fixed (#245)
 
1.9.13 (2013-05-29)
 ! HTML injection via Atlas name bug #242
 ! Workaround for Java bug in JPEG writer (if source image has alpha 
    transparency) implemented
 + French translation added (thanks to Jean-Claude Repetto) [patch #31]

1.9.12 (2013-04-17)
 ! Mapsource OpenStreetMap Maps4u.eu updated
 ~ Reduced the number of decimal places of coordinates in GPX files created by 
    MOBAC to 5 places (#242)
 + Custom multi-layer map sources: Each layer can now have an alpha 
    transparency value, specified as space separated list in <layersAlpha>
    element
 ! Bufix of conversion between different coordinate formats (degree, deg/min, 
    deg/min/sec)
 ~ localImageFile support using <retinaDisplay> (patch by miocool)
 ~ More atlas format support retina (scale = 2) images, including Paper(PNG), 
    Paper(pdf). (patch by miocool) 
 ! More atlas format can display retina (scale = 2) images correctly 
    (convert to scale = 1), such as iPhone v5 (patch by miocool)  
 + Add <localImageFile> map source support (patch by miocool)
 ! Bug fix of 512x512 map tile images in Multiple layer (patch by miocool)
 + Multiple language for Simplify-Chinese, Traditional Chinese and English
    (patch by miocool)
 + View 512x512 map tile images for retina display (patch by miocool) 

1.9.11 (2013-02-19)
 ! Bugfix for servers that send case insensitive content-types
 ! Bugfix OruxMapsSQlite final commit was missing (patch #30)
 + New map sources: USGS National Map Base/Satellite/Satellite+/Vector/Topo
 ! Bugfix Garmin Custom Map: Removed possibility to set output format to PNG  
