@@ -17,6 +17,8 @@
  + Japanese translation added (thanks to "u/ta-ka") [patch #33]
  ! Not translated tooltip corrected [patch #34]
  ! A problem with MapSourceInitializationException fixed (#245)
+ ! Memory leak fixed in "TwoNav (RMAP)" atlas format causing an 
+    OutOfMemoryError when creating a large atlas
  
 1.9.13 (2013-05-29)
  ! HTML injection via Atlas name bug #242
